--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -64,7 +64,7 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 # exec-once = nm-applet &
 exec-once = bash -c "sleep 0.3 && hyprctl dispatch workspace 2 && $terminal"
 exec-once = bash -c "sleep 0.6 && hyprctl dispatch workspace 1 && $browser"
-exec-once = hyprlock || hyprctl dispatch exit
+# exec-once = hyprlock || hyprctl dispatch exit
 # exec-once = waybar & hyprpaper & firefox
 
 #############################
