--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -35,7 +35,7 @@ monitor=,preferred,auto,1.6,mirror,DP-1
 $terminal = ghostty
 $fileManager = nautilus
 $menu = tofi-drun -c ~/.config/tofi/configA --drun-launch=true
-$browser = /opt/zen-browser-bin/zen-bin
+$browser = flatpak run app.zen_browser.zen
 $notes = obsidian
 $editor = ~/Downloads/Cursor-0.50.5-x86_64.AppImage.zs-old &
 $editor-alt = subl
@@ -52,7 +52,7 @@ $colorPicker = hyprpicker
 
 exec-once=/usr/lib/polkit-kde-authentication-agent-1 #Polkit to manage passwords
 exec-once=/usr/bin/dunst
-exec-once=waybar # topbar
+exec-once=env LANG=en_US.UTF-8 LC_TIME=en_US.UTF-8 waybar &
 exec-once = swww-daemon
 exec-once = bash -c "sleep 0.5 && swww img ~/.config/assets/backgrounds/cat_leaves.png --transition-fps 255 --transition-type outer --transition-duration 0.8"
 exec-once = wl-paste --type text --watch cliphist store # clipboard
@@ -64,7 +64,7 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 # exec-once = nm-applet &
 exec-once = bash -c "sleep 0.3 && hyprctl dispatch workspace 2 && $terminal"
 exec-once = bash -c "sleep 0.6 && hyprctl dispatch workspace 1 && $browser"
-# exec-once = hyprlock || hyprctl dispatch exit
+exec-once = hyprlock || hyprctl dispatch exit
 # exec-once = waybar & hyprpaper & firefox
 
 #############################
@@ -75,7 +75,7 @@ exec-once = bash -c "sleep 0.6 && hyprctl dispatch workspace 1 && $browser"
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
+env = XCURSOR_THEME,Bibata-Modern-Ice
 # Firefox
 # env = MOZ_ENABLE_WAYLAND,1
 
@@ -104,6 +104,15 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
+#for libadwaita gtk4 apps you can use this command:
+exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
+
+#for gtk3 apps you need to install adw-gtk3 theme (in arch linux sudo pacman -S adw-gtk-theme)
+exec = gsettings set org.gnome.desktop.interface gtk-theme "adw-gtk3"   # for GTK3 apps
+
+#for kde apps you need to install: sudo pacman -S qt5ct qt6ct kvantum kvantum breeze-icons   
+#you will need to set dark theme for qt apps from kde more difficult thans with gnome :D:
+env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps# Theme
 
 #####################
 ### LOOK AND FEEL ###
@@ -224,8 +233,8 @@ input {
     repeat_rate = 30
 
     follow_mouse = 1
-    # force_no_accel = 1
-    accel_profile = flat
+    force_no_accel = 0
+    accel_profile = adaptive
     sensitivity = 0.7 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
@@ -261,7 +270,7 @@ bind = $mainMod, C, exec, $editor
 bind = $mainMod, S, exec, $editor-alt
 bind = $mainMod, Q, killactive,
 bind = $mainMod, N, exec, swww img ~/.config/assets/backgrounds/cat_leaves.png  --transition-fps 255 --transition-type outer --transition-duration 0.8
-bind = $mainMod, F, exec, $fileManager
+bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, S, exec, shutdown now
 bind = $mainMod, R, exec, reboot
 bind = $mainMod, W, togglefloating,
@@ -304,7 +313,7 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
 #bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e-1
@@ -342,8 +351,8 @@ bind = SUPER, L, exec, hyprlock
 bind = SUPER, ESCAPE, exec, wlogout
 
 # waybar
-bind = Ctrl, Escape, exec, killall waybar || waybar # toggle waybar
-
+# bind = Ctrl, Escape, exec, killall waybar || waybar &
+bind = Ctrl, Escape, exec, killall waybar || env LANG=en_US.UTF-8 LC_TIME=en_US.UTF-8 waybar &
 # Screenshot 
 # add --cursor flag to include cursor also, --freeze flag to freeze before selection
 bind = , Print, exec, grimblast --notify copysave screen # Entire screen + clipboard copy
