--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -20,41 +20,41 @@ window-colorspace = "display-p3"
 # foreground = d4be98
 
 # keybindings
-keybind = cmd+s>r=reload_config
-keybind = cmd+s>x=close_surface
+keybind = alt+d>r=reload_config
+keybind = alt+d>x=close_surface
 
-keybind = cmd+s>n=new_window
+keybind = alt+d>n=new_window
 
 # tabs 
-keybind = cmd+s>c=new_tab
-keybind = cmd+s>shift+l=next_tab
-keybind = cmd+s>shift+h=previous_tab
-keybind = cmd+s>comma=move_tab:-1
-keybind = cmd+s>period=move_tab:1
+keybind = alt+d>c=new_tab
+keybind = alt+d>shift+l=next_tab
+keybind = alt+d>shift+h=previous_tab
+keybind = alt+d>comma=move_tab:-1
+keybind = alt+d>period=move_tab:1
 
 # quick tab switch
-keybind = cmd+s>1=goto_tab:1
-keybind = cmd+s>2=goto_tab:2
-keybind = cmd+s>3=goto_tab:3
-keybind = cmd+s>4=goto_tab:4
-keybind = cmd+s>5=goto_tab:5
-keybind = cmd+s>6=goto_tab:6
-keybind = cmd+s>7=goto_tab:7
-keybind = cmd+s>8=goto_tab:8
-keybind = cmd+s>9=goto_tab:9
+keybind = alt+d>1=goto_tab:1
+keybind = alt+d>2=goto_tab:2
+keybind = alt+d>3=goto_tab:3
+keybind = alt+d>4=goto_tab:4
+keybind = alt+d>5=goto_tab:5
+keybind = alt+d>6=goto_tab:6
+keybind = alt+d>7=goto_tab:7
+keybind = alt+d>8=goto_tab:8
+keybind = alt+d>9=goto_tab:9
 
 # split
-keybind = cmd+s>\=new_split:right
-keybind = cmd+s>-=new_split:down
+keybind = alt+d>\=new_split:right
+keybind = alt+d>-=new_split:down
 
-keybind = cmd+s>j=goto_split:bottom
-keybind = cmd+s>k=goto_split:top
-keybind = cmd+s>h=goto_split:left
-keybind = cmd+s>l=goto_split:right
+keybind = alt+d>k=goto_split:bottom
+keybind = alt+d>i=goto_split:top
+keybind = alt+d>j=goto_split:left
+keybind = alt+d>l=goto_split:right
 
-keybind = cmd+s>z=toggle_split_zoom
+keybind = alt+d>z=toggle_split_zoom
 
-keybind = cmd+s>e=equalize_splits
+keybind = alt+d>e=equalize_splits
 
 # other
 # copy-on-select = clipboard
