--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -242,11 +242,11 @@ input {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = true
-    workspace_swipe_fingers = 3
-}
+# # https://wiki.hyprland.org/Configuring/Variables/#gestures
+# gestures {
+#     workspace_swipe = true
+#     workspace_swipe_fingers = 3
+# }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
