massive change for new nvim version va lazyvim version

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -178,10 +178,10 @@ animations {
     bezier = winIn, 0.1, 1.1, 0.1, 1.1
     bezier = winOut, 0.3, -0.3, 0, 1
     bezier = liner, 1, 1, 1, 1
-    animation = windows, 1, 6, wind, slide
-    animation = windowsIn, 1, 6, winIn, popin 80%
-    animation = windowsOut, 1, 5, winOut, popin 80%
-    animation = windowsMove, 1, 5, wind, slide
+    animation = windows, 1, 5, default, gnomed 
+    animation = windowsIn, 1, 6, winIn, gnomed 
+    animation = windowsOut, 1, 5, winOut, gnomed
+    animation = windowsMove, 1, 5, wind, popin
     animation = border, 1, 1, liner
     animation = borderangle, 1, 30, liner, loop
     animation = fade, 1, 10, default
@@ -270,7 +270,7 @@ bind = $mainMod, C, exec, $editor
 bind = $mainMod, S, exec, $editor-alt
 bind = $mainMod, Q, killactive,
 bind = $mainMod, N, exec, swww img ~/.config/assets/backgrounds/cat_leaves.png  --transition-fps 255 --transition-type outer --transition-duration 0.8
-bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, S, exec, shutdown now
 bind = $mainMod, R, exec, reboot
 bind = $mainMod, W, togglefloating,
