chore: remove useless keybind

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -36,9 +36,6 @@ $terminal = ghostty
 $fileManager = nautilus
 $menu = tofi-drun -c ~/.config/tofi/configA --drun-launch=true
 $browser = flatpak run app.zen_browser.zen
-$notes = obsidian
-$editor = ~/Downloads/Cursor-0.50.5-x86_64.AppImage.zs-old &
-$editor-alt = subl
 $colorPicker = hyprpicker
 
 # --enable-features=UseOzonePlatform --ozone-platform=wayland use this flag to launch CEF/Electron apps in wayland
@@ -248,12 +245,6 @@ input {
 #     workspace_swipe_fingers = 3
 # }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
 
 ####################
 ### KEYBINDINGSS ###
@@ -265,9 +256,6 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, B, exec, $browser
-bind = $mainMod, O, exec, $notes
-bind = $mainMod, C, exec, $editor
-bind = $mainMod, S, exec, $editor-alt
 bind = $mainMod, Q, killactive,
 bind = $mainMod, N, exec, swww img ~/.config/assets/backgrounds/cat_leaves.png  --transition-fps 255 --transition-type outer --transition-duration 0.8
 bind = $mainMod, F, exec, $fileManager
@@ -355,7 +343,7 @@ bind = SUPER, ESCAPE, exec, wlogout
 bind = Ctrl, Escape, exec, killall waybar || env LANG=en_US.UTF-8 LC_TIME=en_US.UTF-8 waybar &
 # Screenshot 
 # add --cursor flag to include cursor also, --freeze flag to freeze before selection
-bind = , Print, exec, grimblast --notify copysave screen # Entire screen + clipboard copy
+bindl = , Print, exec, grimblast --notify copysave screen # Entire screen + clipboard copy
 bind = SUPER, Print, exec, grimblast --notify copysave active # current Active window only + clipboard copy
 bind = SUPER SHIFT, S, exec, grimblast --notify copysave area # Select area to take screenshot
 
