chore: add a comment for tmux set hook

--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -8,6 +8,7 @@ set -g focus-events on
 # auto window rename
 set-window-option -g automatic-rename
 # this will allow you to rename the session to the same name as the folder when exit
+# for example: workshop: 1 window..., you can just "tmux a -t wo" and that is enough to access this session
 set-hook -g client-detached 'run-shell "tmux rename-session -t #{session_name} $(basename #{pane_current_path})"'
 
 # Keybindings
