--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -59,11 +59,12 @@ TMUX_FZF_PREVIEW=1
 
 # Theme
 set -g default-terminal "tmux-256color"
-set -g status-style bg="#19181F"
+set -g status-style bg=default
 set -g status-left ""
 set -g status-right ""
 set -g pane-border-style fg=grey
 set -g pane-active-border-style fg=yellow
+set -g status-bg default
 # Window buttons
 set -g status-justify centre
 set -g window-status-format "●"
