fix(fastfetch): below line of the first

--- a/config/fastfetch/config.jsonc
+++ b/config/fastfetch/config.jsonc
@@ -60,6 +60,10 @@
             "key": "\u001b[34m   Editor",
             "keyWidth": 15,
         },
+        {
+            "type": "custom",
+            "format": "\u001b[90m └────────────────────────────────────────────────────┘",
+        },
         // {
         //     "type": "custom",
         //     "format": "\u001b[90m┌────────────────────────────────────────────────────────────┐",
